--- a/html/index.html
+++ b/html/index.html
@@ -20,30 +20,34 @@
   </head>
   <body>
     <div class="container">
-  <h1>Benchmarking on Aliyun</h1>
-  <h2>Machine Details</h2>
+  <h1>AWS Benchmarks Machine Specifications</h1>
   <table class="table">
     <thead>
       <tr>
         <th scope="col">Type</th>
         <th scope="col">vCPU</th>
         <th scope="col">Mem (GiB)</th>
-        <th scope="col">CPU model</th>
+        <th scope="col">Disk</th>
+        <th scope="col">Network Performance (Gbps)</th>
+        <th scope="col">EBS Bandwidth(Mbps)</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th scope="row">ecs.c5.4xlarge</th>
+        <th scope="row">c5.4xlarge</th>
         <td>16</td>
         <td>32</td>
-        <td>Intel(R) Xeon(R) Platinum 8163 CPU @ 2.50GHz</td>
+        <td>EBS-only</td>
+        <td>Up to 10</td>
+        <td>4750</td>
       </tr>
     </tbody>
   </table>
   <div id="results">
-    <h2>Benchmarking Results</h2>
+    <h1>Benchmarking Results</h1>
     <p>
-      Results are split by distance measure and dataset. Each
+      Results are split by distance measure and dataset. In the bottom, you can
+      find an overview of an algorithm's performance on all datasets. Each
       dataset is annoted by <em>(k = ...)</em>, the number of nearest neighbors
       an algorithm was supposed to return. The plot shown depicts
       <em>Recall</em> (the fraction of true nearest neighbors found, on average
@@ -52,79 +56,8 @@
       size, and build time.
     </p>
          <div class="resultsContainer">
-            <h3>Distance: Angular</h3>
-      <div class="datasetsContainer">
-                <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">glove-200-angular_10_angular</h5>
-            <a href="./glove-200-angular_10_angular.html">
-              <img
-                class="card-img-top"
-                src="glove-200-angular_10_angular.png"
-              />
-            </a>
-            <p class="card-text">glove-200-angular (k = 10)</p>
-            <a
-              href="./glove-200-angular_10_angular.html"
-              class="btn btn-primary"
-              >Detail</a
-            >
-          </div>
-        </div>
-                <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">nytimes-256-angular_10_angular</h5>
-            <a href="./nytimes-256-angular_10_angular.html">
-              <img
-                class="card-img-top"
-                src="nytimes-256-angular_10_angular.png"
-              />
-            </a>
-            <p class="card-text">nytimes-256-angular (k = 10)</p>
-            <a
-              href="./nytimes-256-angular_10_angular.html"
-              class="btn btn-primary"
-              >Detail</a
-            >
-          </div>
-        </div>
-              </div>
             <h3>Distance: Euclidean</h3>
       <div class="datasetsContainer">
-                <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">fashion-mnist-784-euclidean_10_euclidean</h5>
-            <a href="./fashion-mnist-784-euclidean_10_euclidean.html">
-              <img
-                class="card-img-top"
-                src="fashion-mnist-784-euclidean_10_euclidean.png"
-              />
-            </a>
-            <p class="card-text">fashion-mnist-784-euclidean (k = 10)</p>
-            <a
-              href="./fashion-mnist-784-euclidean_10_euclidean.html"
-              class="btn btn-primary"
-              >Detail</a
-            >
-          </div>
-        </div>
-                <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">gist-960-euclidean_10_euclidean</h5>
-            <a href="./gist-960-euclidean_10_euclidean.html">
-              <img
-                class="card-img-top"
-                src="gist-960-euclidean_10_euclidean.png"
-              />
-            </a>
-            <p class="card-text">gist-960-euclidean (k = 10)</p>
-            <a
-              href="./gist-960-euclidean_10_euclidean.html"
-              class="btn btn-primary"
-              >Detail</a
-            >
-          </div>
-        </div>
                 <div class="card">
           <div class="card-body">
             <h5 class="card-title">sift-128-euclidean_10_euclidean</h5>
@@ -137,26 +70,6 @@
             <p class="card-text">sift-128-euclidean (k = 10)</p>
             <a
               href="./sift-128-euclidean_10_euclidean.html"
-              class="btn btn-primary"
-              >Detail</a
-            >
-          </div>
-        </div>
-              </div>
-            <h3>Distance: Hamming</h3>
-      <div class="datasetsContainer">
-                <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">sift-256-hamming_10_hamming</h5>
-            <a href="./sift-256-hamming_10_hamming.html">
-              <img
-                class="card-img-top"
-                src="sift-256-hamming_10_hamming.png"
-              />
-            </a>
-            <p class="card-text">sift-256-hamming (k = 10)</p>
-            <a
-              href="./sift-256-hamming_10_hamming.html"
               class="btn btn-primary"
               >Detail</a
             >
